--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,203 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>AirBnb Clone</title>
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/8-places.css">
-    <link rel="icon" href="images/icon.png" type="image/png">
-</head>
-
-<body>
+  <head>
+    <title>AirBnB clone</title>
+    <link rel="stylesheet" type="text/css" href="styles/4-common.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/3-header.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/3-footer.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/6-filters.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/8-places.css"/>
+    <link rel="shortcut icon" href="images/HBTN_browser_icon.png"/>
+    <link rel="icon" href="images/HBTN_browser_icon.png"/>
+  </head>
+  <body>
     <header>
-        <div class="logo"></div>
     </header>
     <div class="container">
-        <section class="filters">
-            <button type="button">Search</button>
-            <div class="locations">
-                <h3>States</h3>
-                <h4>California, Arizona...</h4>
-                <ul class="popover">
-                    <li>
-                        <h2>Arizona:</h2>
-                    </li>
-                    <li>
-                        <ul class="popover_list">
-                            <li>Page</li>
-                            <li>Page2</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <h2>California:</h2>
-                    </li>
-                    <li>
-                        <ul class="popover_list">
-                            <li>San Francisco</li>
-                            <li>Los Altos</li>
-                        </ul>
-                    </li>
+      <section class="filters">
+          <div class="locations">
+            <h3 class="title">States</h3>
+              <h4 class="subtitle">Its a fake content!</h4>
+            <ul class="popover">
+              <li><h2>Arizona:</h2>
+                <ul class="sublist">
+                  <li>Page1</li>
+                  <li>Page1</li>
                 </ul>
-            </div>
-            <div class="amenities">
-                <h3>Amenities</h3>
-                <h4>Internet, Kitchen...</h4>
-                <ul class="popover">
-                    <li>Internet</li>
-                    <li>TV</li>
-                    <li>Kitchen</li>
-                    <li>Iron</li>
+              </li>
+              <li><h2>Connecticut:</h2>
+                <ul class="sublist">
+                  <li>New Haven</li>
+                  <li>Hartford</li>
                 </ul>
+              </li>
+            </ul>
+          </div>
+          <div class="amenities">
+            <h3 class="title">Amenities</h3>
+              <h4 class="subtitle">Its more fake content!</h4>
+            <ul class="popover">
+              <li>TV</li>
+              <li>Internet</li>
+              <li>DemonGate</li>
+              <li>Your Mother-in-Law</li>
+            </ul>
+          </div>
+          <button>Search</button>
+      </section>
+      <section class="places">
+        <h1>Places</h1>
+        <article>
+          <h2 class="title_of_place">My Home</h2>
+          <div class="price_by_night">
+            <p>$80</p>
+          </div>
+          <div class="information">
+            <div class="max_guest">
+              <p>3 Guests</p>
             </div>
-        </section>
-        <section class="places">
-            <div class="places_title">
-                <h1>Places</h1>
+            <div class="number_rooms">
+              <p>2 Rooms</p>
             </div>
-            <div class="articles">
-                <article>
-                    <div class="price_title">
-                        <div class="article_title">
-                            <h2>My Home</h2>
-                        </div>
-                        <div class="price_by_night">
-                            <div class="price">
-                                $80
-                            </div>
-                        </div>
-                    </div>
-                    <div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon">
-                            </div>
-                            <div class="guest_number">
-                                <h2>2 Guests</h2>
-                            </div>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="rooms_icon">
-                            </div>
-                            <div class="rooms_number">
-                                <h2>1 Bedroom</h2>
-                            </div>
-                        </div>
-                        <div class="number_bathrooms">
-                            <div class="bathrooms_icon">
-                            </div>
-                            <div class="bathrooms_number">
-                                <h2>1 Bathroom</h2>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <b>Owner:</b> John Lennon
-                    </div>
-                    <div class="description">
-                        This is a lovely 1 bedroom and 1 bathroom apartment than can
-                        accomodate 2 people. It locates at center of Shangai
-                        and next to subway line 1, 1 stop to People Square, 2 stops to
-                        Bund, 3 stops to Jingan Temple.
-                    </div>
-                </article>
-                <article>
-                    <div class="price_title">
-                        <div class="article_title">
-                            <h2>Tiny House</h2>
-                        </div>
-                        <div class="price_by_night">
-                            <div class="price">
-                                $80
-                            </div>
-                        </div>
-                    </div>
-                    <div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon">
-                            </div>
-                            <div class="guest_number">
-                                <h2>4 Guests</h2>
-                            </div>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="rooms_icon">
-                            </div>
-                            <div class="rooms_number">
-                                <h2>2 Bedrooms</h2>
-                            </div>
-                        </div>
-                        <div class="number_bathrooms">
-                            <div class="bathrooms_icon">
-                            </div>
-                            <div class="bathrooms_number">
-                                <h2>1 Bathroom</h2>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <b>Owner:</b> Adrienne
-                    </div>
-                    <div class="description">
-                        Our place is a private, affordable stand-alone guest house
-                        centrally located just minutes to French Quarters, downtown,
-                        The Fair Groundz(Jazz Fest) and City Park. The guest house is
-                        a quaint, 400 square ft. with a full bath, mini kitchen, & living
-                        room. The extra high cellings make the home feel more
-                        spacious. The sofa converts to a bed also. We have a hand
-                        made counter area that adds character to the room and a
-                        great porch/deck to relax on and have a glass of Merlot.
-
-                    </div>
-                </article>
-                <article>
-                    <div class="price_title">
-                        <div class="article_title">
-                            <h2>A Suite</h2>
-                        </div>
-                        <div class="price_by_night">
-                            <div class="price">
-                                $190
-                            </div>
-                        </div>
-                    </div>
-                    <div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon">
-                            </div>
-                            <div class="guest_number">
-                                <h2>2 Guests</h2>
-                            </div>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="rooms_icon">
-                            </div>
-                            <div class="rooms_number">
-                                <h2>1 Bedroom</h2>
-                            </div>
-                        </div>
-                        <div class="number_bathrooms">
-                            <div class="bathrooms_icon">
-                            </div>
-                            <div class="bathrooms_number">
-                                <h2>1 Bathroom</h2>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <b>Owner:</b> Ayomide Suara
-                    </div>
-                    <div class="description">
-                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-                    </div>
-                </article>
+            <div class="number_bathrooms">
+              <p>8 Bathrooms</p>
             </div>
-        </section>
+          </div>
+          <div class="user">
+            <p><span class="ownerBold">Owner</span>: The Ginger</p>
+          </div>
+          <div class="description">
+            <p>All the text in the world should go here becuase this is 
+              how you write text correctly and in a really long way am i right
+              or am i right!?
+            </p>
+          </div>
+        </article>
+        <article>
+          <h2 class="title_of_place">Tiny House</h2>
+          <div class="price_by_night">
+            <p>$75</p>
+          </div>
+          <div class="information">
+            <div class="max_guest">
+              <p>10 Guests</p>
+            </div>
+            <div class="number_rooms">
+              <p>1 Rooms</p>
+            </div>
+            <div class="number_bathrooms">
+              <p>3 Bathrooms</p>
+            </div>
+          </div>
+          <div class="user">
+            <p><span class="ownerBold">Owner</span>: Spongebob</p>
+          </div>
+          <div class="description">
+            <p>Who lives in a pineapple under the sea? SpongeBob SquarePants!
+                Absorbent and yellow and porous is he SpongeBob SquarePants!
+                If nautical nonsense be something you wish! SpongeBob SquarePants!
+                Then drop on the deck and flop like a fish! SpongeBob SquarePants!
+            </p>
+          </div>
+        </article>
+        <article>
+          <h2 class="title_of_place">A Nice Suite</h2>
+          <div class="price_by_night">
+            <p class="tripleDigits">$195</p>
+          </div>
+          <div class="information">
+            <div class="max_guest">
+              <p>1 Guests</p>
+            </div>
+            <div class="number_rooms">
+              <p>10 Rooms</p>
+            </div>
+            <div class="number_bathrooms">
+              <p>0.5 Bathrooms</p>
+            </div>
+          </div>
+          <div class="user">
+            <p><span class="ownerBold">Owner</span>: Uncle Phil</p>
+          </div>
+          <div class="description">
+            <p>In west Philadelphia born and raised
+                On the playground was where I spent most of my days
+                Chillin' out maxin' relaxin' all cool
+                And all shootin some b-ball outside of the school
+                When a couple of guys who were up to no good
+                Started making trouble in my neighborhood
+                I got in one little fight and my mom got scared
+                She said 'You're movin' with your auntie and uncle in Bel Air'
+            </p>
+          </div>
+        </article>
+      </section>
     </div>
     <footer>
-        Best School
+      <p>Holberton School</p>
     </footer>
-</body>
-
+  </body>
 </html>
